--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section class="products">
       <div class="product-card">
         <div class="sale-badge">Sale</div>
-        <img src="/Test//Assets/product1.png" alt="Product 1" />
+        <img src="  Assets/product1.png" alt="Product 1" />
         <div class="icon-container">
           <button class="icon-heart">
             <svg
@@ -113,7 +113,7 @@
       </div>
       <div class="product-card">
         <div class="sale-badge">Sale</div>
-        <img src="/Test//Assets/product2.png" alt="Product 1" />
+        <img src="/Test/Assets/product2.png" alt="Product 1" />
         <div class="icon-container">
           <button class="icon-heart">
             <svg
@@ -204,7 +204,7 @@
       </div>
       <div class="product-card">
         <div class="sale-badge">Sale</div>
-        <img src="/Test//Assets/product3.png" alt="Product 1" />
+        <img src="  Assets/product3.png" alt="Product 1" />
         <div class="icon-container">
           <button class="icon-heart">
             <svg
@@ -295,7 +295,7 @@
       </div>
       <div class="product-card">
         <div class="sale-badge">Sale</div>
-        <img src="/Test//Assets/product4.png" alt="Product 1" />
+        <img src="  Assets/product4.png" alt="Product 1" />
         <div class="icon-container">
           <button class="icon-heart">
             <svg
@@ -386,7 +386,7 @@
       </div>
       <div class="product-card">
         <div class="sale-badge">Sale</div>
-        <img src="/Test//Assets/product4.png" alt="Product 1" />
+        <img src="  Assets/product4.png" alt="Product 1" />
         <div class="icon-container">
           <button class="icon-heart">
             <svg
@@ -477,7 +477,7 @@
       </div>
       <div class="product-card">
         <div class="sale-badge">Sale</div>
-        <img src="/Test//Assets/product3.png" alt="Product 1" />
+        <img src="  Assets/product3.png" alt="Product 1" />
         <div class="icon-container">
           <button class="icon-heart">
             <svg
@@ -568,7 +568,7 @@
       </div>
       <div class="product-card">
         <div class="sale-badge">Sale</div>
-        <img src="/Test//Assets/product4.png" alt="Product 1" />
+        <img src="  Assets/product4.png" alt="Product 1" />
         <div class="icon-container">
           <button class="icon-heart">
             <svg
